compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__case__case_branches_guards_are_wrapped_in_parentheses.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn anything() -> a {\n  case [] {\n    [a] if False || True -> a\n    _ -> anything()\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toList listHasLength;
  
  anything =
    let
      _pat' = toList [ ];
    in
      if listHasLength _pat' 1 && (false || true)
      then let a = _pat'.head; in a
      else anything;
in {}
