compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__case__case_local_var_in_tuple.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, y) {\n  let z = False\n  case True {\n    x if #(x, z) == #(True, False) -> x\n    _ -> False\n  }\n}\n"
---
let
  go =
    x: y:
      let
        z = false;
      in
        let
          _pat' = true;
        in
          if { _0 = _pat'; _1 = z; } == { _0 = true; _1 = false; }
          then let x'1 = _pat'; in x'1
          else false;
in {}
