compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__case__multi_subject_or.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, y) {\n  case x, y {\n    True, _ | _, True -> 1\n    _, _ -> 0\n  }\n}\n"
---
let go = x: y: if x then 1 else if y then 1 else 0; in {}
