compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__case__nested_string_prefix_match_that_would_crash_on_js.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn main() {\n  case Ok([\"b c\", \"d\"]) {\n    Ok([\"b \" <> _, \"d\"]) -> 1\n    _ -> 1\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) Ok strHasPrefix toList listHasLength;
  
  main =
    let
      _pat' = Ok (toList [ "b c" "d" ]);
    in
      if
        _pat'.__gleam_tag' == "Ok" &&
        listHasLength _pat'._0 2 &&
        strHasPrefix "b " _pat'._0.head &&
        _pat'._0.tail.head == "d"
      then 1
      else 1;
in {}
