compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__case__pipe.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, f) {\n  case x |> f {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
---
let
  go =
    x: f: let _pat' = let _pipe = x; in f _pipe; in if _pat' == 0 then 1 else 2;
in {}
